fix: ensure MapThummbail renders properly on Safari

--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -34,10 +34,6 @@
   filter: saturate(1);
 }
 
-.saturated {
-  filter: saturate(1);
-}
-
 /* Animation on statistics. */
 @keyframes across {
   0% {
